--- a/app/src/main/res/layout/fragment_recruitmentfragment.xml
+++ b/app/src/main/res/layout/fragment_recruitmentfragment.xml
@@ -21,8 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="25dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="15dp"
                 android:fontFamily="@font/helveticaneu_bold"
                 android:text="Recruitment"
                 android:textColor="#000"
@@ -248,19 +247,17 @@
 
             <Button
                 android:id="@+id/buttonDomainSubmit"
-                android:layout_width="133dp"
-                android:layout_height="53dp"
+                android:layout_width="120dp"
+                android:layout_height="45dp"
                 android:layout_marginStart="139dp"
                 android:layout_marginLeft="139dp"
                 android:layout_marginTop="28dp"
-                android:layout_marginBottom="30dp"
                 android:background="@drawable/quiznext"
                 android:fontFamily="@font/helveticaneue_medium"
-                android:text="Submit"
+                android:text="Next"
                 android:textAllCaps="false"
                 android:textColor="#3582FF"
                 android:textSize="18dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cardViewDesign" />
 
