add home page and cardview layouts

--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:fontFamily="@font/helveticaneu_bold"
         android:text="Edit Profile"
         android:textColor="#000000"
@@ -25,9 +25,10 @@
         android:id="@+id/editProfilebackBtn"
         android:layout_width="60dp"
         android:layout_height="25dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="25dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/backbgeditpro"
+        android:foreground="?android:attr/selectableItemBackground"
         android:fontFamily="@font/robotoregular"
         android:text="Back"
         android:textAllCaps="false"
