--- a/app/src/main/res/layout/fragment_recruitmentfragment.xml
+++ b/app/src/main/res/layout/fragment_recruitmentfragment.xml
@@ -249,15 +249,16 @@
                 android:id="@+id/buttonDomainSubmit"
                 android:layout_width="120dp"
                 android:layout_height="45dp"
-                android:layout_marginStart="139dp"
-                android:layout_marginLeft="139dp"
                 android:layout_marginTop="28dp"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/quiznext"
                 android:fontFamily="@font/helveticaneue_medium"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:text="Next"
                 android:textAllCaps="false"
                 android:textColor="#3582FF"
                 android:textSize="18dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cardViewDesign" />
 
