--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -18,7 +18,7 @@
     <item
         android:id="@+id/navigation_settings"
         android:title="Settings"
-        android:icon="@drawable/ic_settings"/>
+        android:icon="@drawable/ic_user"/>
 
 
 </menu>
