--- a/app/src/main/res/layout/fragment_recruitmentfragment.xml
+++ b/app/src/main/res/layout/fragment_recruitmentfragment.xml
@@ -20,7 +20,8 @@
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="25dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="15dp"
                 android:fontFamily="@font/helveticaneu_bold"
                 android:text="Recruitment"
@@ -33,9 +34,9 @@
                 android:id="@+id/textView18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="25dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
                 android:fontFamily="@font/helveticaneue_medium"
                 android:text="Choose your domain for quiz"
                 android:textColor="#395AFF"
@@ -48,11 +49,11 @@
                 android:id="@+id/cardViewTechnical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginLeft="30dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginRight="30dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp"
                 app:cardBackgroundColor="#fff"
                 app:cardCornerRadius="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -115,22 +116,22 @@
                 android:id="@+id/cardViewManagement"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginLeft="30dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginRight="30dp"
-                app:cardCornerRadius="10dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp"
                 app:cardBackgroundColor="#fff"
+                app:cardCornerRadius="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cardViewTechnical">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/clManagement"
-                    android:background="#fff"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="#fff">
 
                     <ImageView
                         android:id="@+id/imageViewManagement"
@@ -182,22 +183,22 @@
                 android:id="@+id/cardViewDesign"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginLeft="30dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginRight="30dp"
-                app:cardCornerRadius="10dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp"
                 app:cardBackgroundColor="#fff"
+                app:cardCornerRadius="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cardViewManagement">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/clDesign"
-                    android:background="#fff"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="#fff">
 
                     <ImageView
                         android:id="@+id/imageViewDesign"
@@ -266,15 +267,16 @@
                 android:id="@+id/textView14"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="25dp"
-                android:layout_marginLeft="25dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="2dp"
                 android:layout_marginEnd="35dp"
                 android:layout_marginRight="35dp"
                 android:fontFamily="@font/helveticaneue_medium"
                 android:text="It is a long established fact that a reader will be distracted by "
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="94dp" />
+                app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
