--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_200">#FFFFFF</color>
+    <color name="purple_500">#FFFFFF</color>
+    <color name="purple_700">#FFFFFF</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
@@ -12,4 +12,7 @@
     <color name="colorPrimaryDark">#4255FF</color>
     <color name="bottomBarIcon">#969698</color>
     <color name="bottomBarIconSelected">#000000</color>
+    <color name="recruitment_white">#ffffff</color>
+    <color name="recruitment_grey">#9F9F9F</color>
+    <color name="recruitment_black">#000000</color>
 </resources>
