--- a/app/src/main/res/layout/fragment_homefragment.xml
+++ b/app/src/main/res/layout/fragment_homefragment.xml
@@ -27,18 +27,17 @@
             app:layout_constraintStart_toStartOf="parent"
             />
 
-         <Button
-             android:id="@+id/adglogoBtn"
-             android:layout_width="40dp"
-             android:layout_height="40dp"
-             android:layout_marginTop="30dp"
-             android:layout_marginRight="25dp"
-             android:layout_marginLeft="25dp"
-             android:background="@drawable/logobtn"
-             android:foreground="?android:attr/selectableItemBackground"
-             app:layout_constraintTop_toTopOf="parent"
-             app:layout_constraintEnd_toEndOf="parent"
-        />
+        <Button
+            android:id="@+id/adglogoBtn"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/adglogo3_1"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/homeEventCardRecycler"
