--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -62,10 +62,7 @@
         app:layout_constraintStart_toEndOf="@id/profile_image"
         app:layout_constraintTop_toBottomOf="@id/editProfileHead"
         />
-
-
-
-    <EditText
+    <TextView
         android:id="@+id/editProfileName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -85,7 +82,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_image" />
 
-    <EditText
+    <TextView
         android:id="@+id/editProfileRegNo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -105,7 +102,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editProfileName" />
 
-    <EditText
+    <TextView
         android:id="@+id/editProfileEmailid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -125,7 +122,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editProfileRegNo" />
 
-    <EditText
+    <TextView
         android:id="@+id/editProfilePhoneNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -145,7 +142,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editProfileEmailid" />
 
-    <EditText
+    <TextView
         android:id="@+id/editProfileGithub"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
