--- a/app/src/main/res/layout/fragment_settings_fragment.xml
+++ b/app/src/main/res/layout/fragment_settings_fragment.xml
@@ -218,7 +218,7 @@
         android:textAllCaps="false"
         android:fontFamily="@font/helveticaneu_bold"
         android:textColor="#3582FF"
-        android:background="#fff"
+        android:background="@android:color/transparent"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
