--- a/app/src/main/res/layout/activity_design_quiz.xml
+++ b/app/src/main/res/layout/activity_design_quiz.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".design_quiz">
+
     <TextView
         android:id="@+id/quizHead"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="70dp"
         android:fontFamily="@font/helveticaneu_bold"
         android:text="Design Round"
@@ -267,5 +268,18 @@
         app:layout_constraintEnd_toStartOf="@+id/buttonDesignQuizNext"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardOption4D" />
+
+    <TextView
+        android:id="@+id/timetextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
+        android:text="1:30s"
+        android:textColor="#000"
+        android:textSize="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
