--- a/app/src/main/res/layout/activity_recruitment_quiz.xml
+++ b/app/src/main/res/layout/activity_recruitment_quiz.xml
@@ -272,4 +272,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardOption4" />
 
+    <TextView
+        android:id="@+id/timer_technical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="23dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
