--- a/app/src/main/res/layout/fragment_management_instructions.xml
+++ b/app/src/main/res/layout/fragment_management_instructions.xml
@@ -1,82 +1,238 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".management_instructions">
+    android:scrollbars="vertical"
+    tools:context=".management_instructions"
+    android:background="#fff">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".management_quiz_instructions">
+        android:scrollbars="vertical">
+
+        <LinearLayout
+            android:id="@+id/mantesthead"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" >
+
+            <Button
+                android:id="@+id/back_button_dm"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/ic_icon_feather_arrow_left"
+                />
+            <TextView
+                android:id="@+id/TestHeading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/helveticaneue_medium"
+                android:text="Management Test"
+                android:layout_marginLeft="20dp"
+                android:layout_gravity="center_vertical"
+                android:textColor="#000"
+                android:textSize="30dp"
+                app:layout_constraintStart_toEndOf="@+id/back_button_dt"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/chooseTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="150dp"
-            android:fontFamily="@font/helveticaneue_medium"
-            android:text="Instructions"
-            android:textColor="#000"
+            android:layout_marginTop="55dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:fontFamily="@font/helveticaneu_bold"
             android:textSize="20dp"
+            android:textColor="#395AFF"
+            android:text="You have choosen Management"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/back_button_dm" />
-
-        <Button
-            android:id="@+id/back_button_dm"
-            android:layout_width="86dp"
-            android:layout_height="57dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="36dp"
-            android:text="Back"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            app:layout_constraintTop_toBottomOf="@+id/mantesthead"
+            />
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/instructionTimeTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:fontFamily="@font/helveticaneue"
+            android:textSize="16dp"
+            android:textColor="#000000"
+            android:text="It is a long established fact that a reader will be distracted by "
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/chooseTextView"
+            />
+
+        <LinearLayout
+            android:id="@+id/timetxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="23dp"
-            android:layout_marginLeft="23dp"
-            android:layout_marginTop="52dp"
-            android:fontFamily="@font/helveticaneue_medium"
-            android:text="Management Test"
-            android:textColor="#000"
-            android:textSize="25dp"
-            app:layout_constraintStart_toEndOf="@+id/back_button_dm"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:background="@drawable/timetxtbg"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/instructionTimeTextView"
+            >
+            <TextView
+                android:id="@+id/fromInstTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Duration : "
+                android:textSize="16dp"
+                android:fontFamily="@font/helveticaneue"
+                android:textColor="#000000"
+                />
+
+            <TextView
+                android:id="@+id/fromInstTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="10 Mins"
+                android:fontFamily="@font/helveticaneu_bold"
+                android:textColor="@color/black"
+                android:textSize="16dp"
+                app:layout_constraintStart_toEndOf="@id/fromInstTextView"
+                app:layout_constraintTop_toBottomOf="@id/instructionTimeTextView"
+                />
+        </LinearLayout>
+
 
         <TextView
-            android:id="@+id/textView13"
-            android:layout_width="0dp"
+            android:id="@+id/InstructionsText"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="46dp"
-            android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna"
-            android:textColor="#9F9F9F"
-            android:textSize="15dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="60dp"
+            android:text="Instructions"
+            android:textSize="24dp"
+            android:textColor="@color/black"
+            android:fontFamily="@font/helveticaneu_bold"
+            app:layout_constraintTop_toBottomOf="@+id/timetxt"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+            />
+
+        <LinearLayout
+            android:id="@+id/InstructionsPoint1man"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/InstructionsText"
+            >
+            <View
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:background="@drawable/ic_dot"
+                android:layout_gravity="center_vertical"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/helveticaneue"
+                android:textSize="16dp"
+                android:textColor="#000000"
+                android:layout_marginLeft="10dp"
+                android:layout_gravity="center_vertical"
+                android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/InstructionsPoint2man"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/InstructionsPoint1man"
+            >
+            <View
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:background="@drawable/ic_dot"
+                android:layout_gravity="center_vertical"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/helveticaneue"
+                android:textSize="16dp"
+                android:textColor="#000000"
+                android:layout_marginLeft="10dp"
+                android:layout_gravity="center_vertical"
+                android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/InstructionsPoint3man"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/InstructionsPoint2man"
+            >
+            <View
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:background="@drawable/ic_dot"
+                android:layout_gravity="center_vertical"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/helveticaneue"
+                android:textSize="16dp"
+                android:textColor="#000000"
+                android:layout_marginLeft="10dp"
+                android:layout_gravity="center_vertical"
+                android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod"
+                />
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/startButton_dm"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
             android:background="@drawable/quiznext"
             android:fontFamily="@font/helveticaneu_bold"
             android:text="Start"
+            android:layout_marginTop="95dp"
+            android:layout_marginBottom="20dp"
             android:textAllCaps="false"
             android:textColor="#4766FF"
             android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView13" />
+            app:layout_constraintTop_toBottomOf="@+id/InstructionsPoint3man" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-</FrameLayout>
+</ScrollView>
